--- a/taco-cloud/src/main/resources/application.yml
+++ b/taco-cloud/src/main/resources/application.yml
@@ -1,3 +1,22 @@
+
+spring:
+  jpa:
+    hibernate:
+      ddl-auto: update
+    datasource:
+      url: jdbc:mysql://localhost/tacocloud
+      username: tacouser
+      password: tacopassword
+      driver-class-name: com.mysql.jdbc.Driver
+
+      schema:
+        - order-schema.sql
+        - ingredient-schema.sql
+        - taco-schema.sql
+        - user-schema.sql
+      data:
+        - ingredients.sql
+
 taco:
   orders:
     pageSize: 10
